--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,6 @@
 .cricle{
     width:20px;
     height:20px;
-    background-color:red;
+    /* background-color:green; */
     border-radius:50px;
 }
